# gvcf_parser_rs

./: .gitignore  Cargo.toml  README  main.py  pyproject.toml  var_joining.py  vcf_test.py
pysrc/test/: test_rusty_vcf_reading.py
src/: errors.rs  gvcf_parser.rs  lib.rs  main.rs  python_bindings.rs  region_splitter.rs  utils_magic.rs  vcf_iterator.rs
tests/: gvcf_parser_tests.rs  integration_test.rs  region_split_test.rs
