[package]
name = "gvcfparser"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = {version = "1.1.1", default-features = false, features = ["zlib-rs"] }
polars = "0.49.1"
pyo3 = { version = "0.25.1", features = ["extension-module"] }
thiserror = "2.0.12"

[lib]
name = "gvcfparser"
crate-type = ["cdylib", "rlib"]
