[package]
name = "gvcfparser"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow2 = { version = "0.18.0", features = ["io_ipc"] }
flate2 = {version = "1.1.1", default-features = false, features = ["zlib-rs"] }
pyo3 = { version = "0.25.1", features = ["extension-module"] }
thiserror = "2.0.12"

[lib]
name = "gvcfparser"
crate-type = ["cdylib", "rlib"]
