[package]
name = "gvcfparser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive"] }
flate2 = {version = "1.1.1", default-features = false, features = ["zlib-rs"] }
polars = { version = "0.49.1", features = ["parquet"] }
thiserror = "2.0.12"

[[bin]]
name = "save_var_regions_as_parquet"
path = "src/main.rs"